# dockerfile

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  appveyor.yml  azure-pipelines.yml  go.mod  parse.go  parse_test.go  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/actions/pre-test/: action.yml
.github/workflows/: main.yml
pylib/: main.go  support.c
tests/: dockerfile_test.py
